# iree

build_tools/bazel/: currentdir_rule.bzl  iree_bitcode_library.bzl
build_tools/bazel_to_cmake/: bazel_to_cmake_converter.py
build_tools/cmake/: iree_bitcode_library.cmake
compiler/src/iree/compiler/Codegen/Common/: BUILD.bazel  BlockDynamicDimensions.cpp  CMakeLists.txt  Passes.td  TensorDynamicDimAnalysis.cpp  TensorDynamicDimAnalysis.h  VectorLayoutAnalysis.cpp
compiler/src/iree/compiler/Codegen/Common/test/: BUILD.bazel  CMakeLists.txt  block_dynamic_dims.mlir
compiler/src/iree/compiler/Codegen/LLVMCPU/: ConvertToLLVM.cpp  DispatchABI.cpp  DispatchABI.h  KernelDispatch.cpp  LLVMCPULowerToUKernels.cpp  Passes.cpp
compiler/src/iree/compiler/Codegen/LLVMCPU/test/: BUILD.bazel
compiler/src/iree/compiler/Codegen/LLVMGPU/: Passes.cpp
compiler/src/iree/compiler/Codegen/Transforms/: Transforms.cpp
compiler/src/iree/compiler/Dialect/Flow/Transforms/: FormDispatchRegions.cpp  FuseMultiUseElementwiseProducer.cpp  FusionOfTensorOps.cpp  FusionPreprocessing.cpp  FusionUtils.cpp
compiler/src/iree/compiler/Dialect/HAL/IR/: HALBase.td
iree/compiler/Codegen/LLVMCPU/: KernelDispatch.cpp
iree/compiler/Dialect/Flow/Transforms/: FusionOfTensorOps.cpp
llvm-external-projects/iree-dialects/include/iree-dialects/Dialect/LinalgExt/Passes/: Passes.h
runtime/src/iree/builtins/ukernel/: BUILD.bazel  CMakeLists.txt
runtime/src/iree/builtins/ukernel/arch/x86_64/: BUILD.bazel
runtime/src/iree/schemas/: cpu_data.h
runtime/src/iree/tooling/: CMakeLists.txt  Serializer.cpp  Serializer.h
tests/e2e/matmul/: BUILD.bazel
tools/: BUILD.bazel  CMakeLists.txt  iree-translate.cpp
